--- a/classic.css
+++ b/classic.css
@@ -16,3 +16,12 @@ header {
     text-align: right;
     margin-top: -50px;
 }
+
+nav > button {
+    margin-top: 15px;
+    background-color: #2255ff;
+    padding: 10px 50px;
+    color: white;
+    border: 2px white solid;
+    border-bottom: none;
+}
