--- a/classic.css
+++ b/classic.css
@@ -18,10 +18,17 @@ header {
 }
 
 nav > button {
-    margin-top: 15px;
-    background-color: #2255ff;
+    margin-top: 15px; margin-right: 10px;
+    background-color: #05d;
     padding: 10px 50px;
     color: white;
-    border: 2px white solid;
+    border: 2px royalblue solid;
     border-bottom: none;
+} nav > button.active {
+    background-color: dodgerblue;
+}
+
+div.tab > h1{
+    font-family: 'Quicksand', 'sans-serif';
+    font-size: 15pt;
 }
